# CatalogueCanvas

./: .codacy.yml  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LLMgibber.txt  PLAN.md  README.md  docker-compose.yml  docker-entrypoint.sh  scratchpad-plan-watermark.md
.github/: SECURITY.md  dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  release.yml  scorecard.yml  security.yml
pipeline/: pyproject.toml
pipeline/src/catalogcanvas/: cli.py  config.py  site.py
scripts/: coverage-to-codacy.sh
server/: pyproject.toml
server/scripts/: diagnostics.py
server/src/catalogcanvas/: auth.py  convert.py  db.py  ids.py  ingest.py  llm.py  main.py  prompt.template.toml  settings.py  wordlist.txt
server/src/catalogcanvas/routers/: auth.py  collections.py  items.py  portfolios.py  settings.py
server/src/cataloguecanvas/: auth.py  convert.py  db.py  diagnostics.py  ids.py  ingest.py  llm.py  main.py  prompt.template.toml  settings.py  static_export.py
server/src/cataloguecanvas/routers/: auth.py  collections.py  items.py  portfolios.py  settings.py
server/tests/: conftest.py  test_diagnostics.py  test_ingest.py  test_items.py  test_routers.py
templates/: base.html  collection.html  collections.html  index.html  item.html  table.html
templates/assets/css/: style.css
templates/assets/js/: search.js
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/api/: activity.test.tsx  activity.tsx  appearance.tsx  auth.tsx  client.test.ts  client.ts  selection.test.tsx  selection.tsx
web/src/components/: ActivityTray.test.tsx  ActivityTray.tsx  BulkToolbar.test.tsx  BulkToolbar.tsx  Footer.tsx  Icon.tsx  ItemCard.tsx  LLMButton.test.tsx  LLMButton.tsx  MetadataForm.test.tsx  MetadataForm.tsx  Nav.test.tsx  Nav.tsx  NotesPanel.test.tsx  NotesPanel.tsx  Uploader.test.tsx  Uploader.tsx  UsersPanel.test.tsx  UsersPanel.tsx
web/src/pages/: CollectionEdit.test.tsx  CollectionEdit.tsx  Collections.test.tsx  Collections.tsx  Dashboard.test.tsx  Dashboard.tsx  ItemEdit.test.tsx  ItemEdit.tsx  Login.test.tsx  Login.tsx  NotFound.tsx  PortfolioEdit.test.tsx  PortfolioEdit.tsx  Portfolios.test.tsx  Portfolios.tsx  Settings.test.tsx  Settings.tsx  Upload.test.tsx  Upload.tsx
web/src/portfolio/: Deck.test.tsx  Deck.tsx  deck.css
web/src/test/: coverage-merge.mjs  coverage-per-file.sh
