[project]
name = "catalogcanvas"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "polars>=0.20",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13",
    "pillow>=10",
    "markdown>=3.6",
    "pytz>=2024.1",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
svg = ["cairosvg>=2.7"]
compress = ["lz4"]

[project.scripts]
catalog = "catalogcanvas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalogcanvas"]
