[project]
name = "catalogcanvas-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pillow>=10",
    "cairosvg>=2.7",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "passlib[argon2]>=1.7",
    "httpx>=0.27",
    "markdown>=3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalogcanvas"]

[tool.hatch.build.targets.wheel.force-include]
"src/catalogcanvas/wordlist.txt" = "catalogcanvas/wordlist.txt"
"src/catalogcanvas/prompt.template.toml" = "catalogcanvas/prompt.template.toml"
