[project]
name = "cataloguecanvas-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pillow>=12.2.0",
    "cairosvg>=2.7",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "passlib[argon2]>=1.7",
    "httpx>=0.28.1",
    "markdown>=3.6",
    "lz4>=4.4.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "respx>=0.21",
    "pip-audit>=2.10.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Floor set just below the achieved level so CI catches regressions without
# being fragile. Ratchet up as coverage grows (static_export, routers remain).
addopts = "-q --cov --cov-fail-under=65"

[tool.coverage.run]
source = ["cataloguecanvas"]
branch = true

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cataloguecanvas"]

[tool.hatch.build.targets.wheel.force-include]
"src/cataloguecanvas/wordlist.txt" = "cataloguecanvas/wordlist.txt"
"src/cataloguecanvas/prompt.template.toml" = "cataloguecanvas/prompt.template.toml"
